--- a/index.html
+++ b/index.html
@@ -46,100 +46,100 @@
     </section>
     <div class="bg-near-white near-black">
         <section>
-            <div class="mw7 center ph3 ph5-ns ph0-l">
+            <div class="center mw7 ph3 ph5-ns ph0-l">
                 <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
             </div>
-            <div class="cf pa2 pa3-ns mb5 mb6-ns">
-                <div class="fl w-100 w-50-ns ph2">
-                    <a href="photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
+            <div class="cf mb5 mb6-ns pa2 pa3-ns">
+                <div class="fl ph2 w-100 w-50-ns">
+                    <a href="photography/large/1-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/1-preview.jpg">
                     </a>
-                    <a href="photography/large/2-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/2-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/2-preview.jpg">
                     </a>
-                    <a href="photography/large/3-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/3-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/3-preview.jpg">
                     </a>
-                    <a href="photography/large/4-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/4-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/4-preview.jpg">
                     </a>
                 </div>
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="photography/large/5-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="photography/large/5-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/5-preview.jpg">
                     </a>
-                    <a href="photography/large/6-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/6-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/6-preview.jpg">
                     </a>
-                    <a href="photography/large/7-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/7-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/7-preview.jpg">
                     </a>
-                    <a href="photography/large/8-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/8-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/8-preview.jpg">
                     </a>
-                    <a href="photography/large/9-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/9-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/9-preview.jpg">
                     </a>
-                    <a href="photography/large/10-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/10-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/10-preview.jpg">
                     </a>
-                    <a href="photography/large/11-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/11-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/11-preview.jpg">
                     </a>
-                    <a href="photography/large/12-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/12-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/12-preview.jpg">
                     </a>
                 </div>
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="photography/large/13-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="photography/large/13-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/13-preview.jpg">
                     </a>
-                    <a href="photography/large/14-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/14-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/14-preview.jpg">
                     </a>
-                    <a href="photography/large/15-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/15-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/15-preview.jpg">
                     </a>
-                    <a href="photography/large/16-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/16-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/16-preview.jpg">
                     </a>
-                    <a href="photography/large/17-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/17-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/17-preview.jpg">
                     </a>
-                    <a href="photography/large/18-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/18-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/18-preview.jpg">
                     </a>
-                    <a href="photography/large/19-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/19-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/19-preview.jpg">
                     </a>
-                    <a href="photography/large/20-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <a href="photography/large/20-large.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="photography/preview/20-preview.jpg">
                     </a>
                 </div>
             </div>
         </section>
         <section>
-            <div class="mw7 center ph3 ph5-ns ph0-l">
+            <div class="center mw7 ph3 ph5-ns ph0-l">
                 <h2 class="f5 f4-ns f3-l mb3 normal pt4 pt5-ns">Painting</h2>
             </div>
             <div class="cf pa2 pa3-ns pb5 pb6-ns">
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="paintings/1-large.jpeg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="paintings/1-preview.jpeg">
                     </a>
                 </div>
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="paintings/2.jpeg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="paintings/2.jpeg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="paintings/2.jpeg">
                     </a>
                 </div>
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="paintings/3-large.jpeg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="paintings/3-large.jpeg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="paintings/3-preview.jpeg">
                     </a>
                 </div>
-                <div class="fl w-50 w-25-ns ph2">
-                    <a href="paintings/4.jpg" class="swipebox pv2 grow db no-underline black">
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="paintings/4.jpg" class="black db grow no-underline pv2 swipebox">
                         <img class="db w-100" src="paintings/4.jpg">
                     </a>
                 </div>
@@ -147,10 +147,10 @@
         </section>
     </div>
     <footer class="bg-near-black near-white" id="contact">
-        <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
-            <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
-            <p class="lh-copy f4-ns">For inquiries or just to chat: <a class="near-white" href="mailto:samueldregan@gmail.com">samueldregan@gmail.com</a> / <a class="near-white" href="https://www.instagram.com/samuel_regan">instagram</a></p>
-            <p class="lh-copy f6-l mt4 courier bt pt4">Site design: <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
+        <div class="center mw7 pb4 pb5-ns ph3 ph5-ns ph0-l">
+            <h1 class="f5 f4-ns f3-l i mt0 near-white normal pt5 pt6-l">Contact</h1>
+            <p class="f4-ns lh-copy">For inquiries or just to chat: <a class="near-white" href="mailto:samueldregan@gmail.com">samueldregan@gmail.com</a> / <a class="near-white" href="https://www.instagram.com/samuel_regan">instagram</a></p>
+            <p class="bt courier f6-l lh-copy mt4 pt4">Site design: <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
         </div>
     </footer>
 
